# 100daysofcuda

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  triton_add.ipynb
src/: setup.py
src/cpu/: kernels.cpp  kernels.h  vectoradd.cpp
src/csrc/: utils.h
src/cuda/: activations.h  convolution.h  cublas_gemm.h  cublas_manager.h  cuda_utils.h  gemm.h  normalization.h  reduction.h  rope.h  softmax.h  tensor.h
src/cuda/attention/: attention_helpers.h  flash_attention.h  utils.h
src/cuda/cutlass/: gemm.h  transpose.h  util.h
src/cutlass/: README.md
src/day_1/: vectoradd.cu
src/day_10/: self_attention.cu
src/day_100/: adamw_update.cu
src/day_11/: attention_bench.cu  profile_batch_bench.py  profile_bench.py
src/day_12/: gemm_bench.cu  profile_bench.py
src/day_13/: gemm_tiled_bench.cu  profile_gemm_bench.py  setup.py
src/day_14/: profile_sum.py  reduction.cu  setup.py
src/day_15/: layer_norm.cu  profile_ln.py  setup.py
src/day_16/: layer_norm.cu  profile_ln.py  setup.py
src/day_17/: convolution.cu  profile_conv2d.py  setup.py
src/day_18/: debugging.md
src/day_19/: gemm_tiled_fused.cu  profile_gemm_bench.py  setup.py
src/day_2/: matmul.cu
src/day_20/: feed_forward.cu  profile_ff.py  profile_swiglu.py  setup.py  swiglu.cu
src/day_21/: feed_forward.md
src/day_22/: feed_forward.cu  feed_forward_cublas.cu  profile_ff.py  setup.py
src/day_23/: main.cpp
src/day_24/: batched_2d_convolution.md
src/day_25/: batched_conv2d.cu  batched_conv2d.h  bindings.cpp  profile_conv2d.py  setup.py
src/day_26/: batched_conv2d.cu  profile_conv2d.py  setup.py
src/day_27/: batched_convolution_channel.md
src/day_28/: batched_convolution_channel_updated.md
src/day_29/: batched_conv2d.cu  batched_conv2d.h  bindings.cpp  profile_conv2d.py  setup.py
src/day_3/: matmul_tiled.cu
src/day_30/: flash_attention.cu
src/day_31/: flash_attention_kernel.md  journal.md
src/day_32/: journal.md
src/day_33/: journal.md
src/day_34/: apply_rope.cu  apply_rope.h  bindings.cpp  profile_rope.py  setup.py
src/day_35/: rope.md
src/day_36/: mma_gemm.cu
src/day_38/: triton_softmax.ipynb
src/day_39/: triton_matmul.ipynb
src/day_4/: softmax.cu
src/day_40/: triton_layer_norm.ipynb
src/day_41/: triton_matmul_optimized.ipynb
src/day_42/: grouped_gemm.md
src/day_43/: triton_rms_norm.ipynb
src/day_44/: triton_apply_rope.ipynb
src/day_49/: triton_conv2d.ipynb
src/day_5/: softmax_tiled.cu  softmax_tiled_no_rescaling.cu
src/day_50/: triton_conv2d.ipynb
src/day_51/: README.md
src/day_52/: triton_conv2d_in_channels_batch.ipynb
src/day_53/: triton_conv2d_in_channels_batch.ipynb
src/day_55/: triton_rms_norm.ipynb
src/day_56/: triton_rms_norm.ipynb  triton_silu.ipynb
src/day_57/: triton_swiglu.ipynb
src/day_58/: triton_swiglu.ipynb
src/day_59/: triton_relu.ipynb
src/day_6/: softmax_tiled.cu
src/day_60/: triton_attention_part_1.ipynb
src/day_61/: triton_attention_part_2.ipynb
src/day_63/: triton_transpose.ipynb
src/day_64/: bindings.cpp  naive_transpose_cutlass.cu  naive_transpose_cutlass.h  profile_transpose.py  setup.py
src/day_65/: bindings.cpp  profile_transpose.py  setup.py  transpose_cutlass.cu  transpose_cutlass.h
src/day_66/: hello_cutlass.cu
src/day_67/: cutlass.gemm.cu
src/day_68/: cutlass_utilities.cu
src/day_69/: cutlass.gemm_array.cu
src/day_7/: online_softmax.cu
src/day_70/: cutlass_gemm_batched.cu
src/day_71/: cutlass_gemm_split_k.cu
src/day_72/: cutlass_gemm_relu.cu
src/day_73/: cutlass_gemm_relu.cu
src/day_74/: README.md
src/day_75/: cutlass_gemm_custom_epilogue.cu
src/day_76/: README.md
src/day_77/: cutlass_gemm_custom_epilogue.cu
src/day_78/: cutlass_gemm_attention.cu
src/day_79/: cutlass_gemm_mha.cu
src/day_8/: online_softmax.cu
src/day_80/: cutlass_gemm_custom_epilogue_swiglu.cu
src/day_81/: cutlass_gemm_batched_swiglu.cu
src/day_82/: README.md
src/day_83/: cutlass_gemm_batched_swiglu_fused.cu
src/day_84/: cutlass_linear_dgrad.cu
src/day_85/: cutlass_linear_wgrad.cu
src/day_86/: cutlass_linear_backward.cu
src/day_87/: cutlass_mqa_scores.cu
src/day_88/: cutlass_mqa_scores_optimized.cu
src/day_89/: cutlass_mqa.cu
src/day_9/: permute.cu  transpose.cu
src/day_90/: cutlass_gqa.cu
src/day_91/: softplus.cu
src/day_92/: softplus_fp16.cu
src/day_93/: softplus_fp16_vectorized_load.cu
src/day_94/: softplus_dgrad.cu
src/day_95/: mandelbrot.cu  mandelbrot.pgm
src/day_96/: crescent.pgm  simple_raytracer.cu
src/day_97/: 1d_time_dependent_schrodinger.cu
src/day_98/: rms_norm_backward.cu
src/day_99/: adam_update.cu
src/flash_attention/: flash_attention_kernel.md
src/setup/: setup.py
src/setup/gemm_bench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/triton_kernels/: base.py  conv2d.py  conv2d_test.py
src/triton_kernels/functional/kernels/: convolution.py
